--- a/Serilog.Sinks.Stackify/Serilog.Sinks.Stackify.csproj
+++ b/Serilog.Sinks.Stackify/Serilog.Sinks.Stackify.csproj
@@ -1,9 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard1.3;net45</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net45</TargetFrameworks>
     <PackageId>Serilog.Sinks.Stackify</PackageId>
-    <Version>2.0.2</Version>
+    <Version>2.1.0</Version>
     <Authors>Serilog.Sinks.Stackify</Authors>
     <Company>Stackify</Company>
     <Product>Serilog Stackify Sink</Product>
@@ -19,18 +19,18 @@
     <AssemblyName>Serilog.Sinks.Stackify</AssemblyName>
     <RootNamespace>Serilog.Sinks.Stackify</RootNamespace>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <AssemblyVersion>2.0.0.0</AssemblyVersion>
-    <FileVersion>2.0.0.0</FileVersion>
+    <AssemblyVersion>2.1.0.0</AssemblyVersion>
+    <FileVersion>2.1.0.0</FileVersion>
   </PropertyGroup>
 
-  <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard1.3' ">
-    <PackageReference Include="Serilog" Version="2.0.0" />
-    <PackageReference Include="StackifyLib" Version="2.0.0" />
+  <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' ">
+    <PackageReference Include="Serilog" Version="2.8.0" />
+    <PackageReference Include="StackifyLib" Version="2.1.4" />
   </ItemGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'net45' ">
-    <PackageReference Include="Serilog" Version="2.0.0" />
-    <PackageReference Include="StackifyLib" Version="2.0.0" />
+    <PackageReference Include="Serilog" Version="2.8.0" />
+    <PackageReference Include="StackifyLib" Version="2.1.4" />
   </ItemGroup>
 
 </Project>
