--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,4 +24,4 @@ steps:
 - task: PowerShell@2
   inputs:
     targetType: 'inline'
-    script: '$Env:SRCCLR_API_TOKEN="$(SRCCLR_API_TOKEN)"; Set-ExecutionPolicy AllSigned -Scope Process -Force; iex ((New-Object System.Net.WebClient).DownloadString(''https://download.srcclr.com/ci.ps1'')); srcclr scan .;'
+    script: $Env:SRCCLR_API_TOKEN="$(SRCCLR_API_TOKEN)"; Set-ExecutionPolicy AllSigned -Scope Process -Force; iex ((New-Object System.Net.WebClient).DownloadString('https://download.srcclr.com/ci.ps1')); srcclr scan .;
