--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,7 @@ pool:
   vmImage: 'windows-latest'
 
 variables:
-  solution: '**/*.sln'
+  solution: 'Serilog.Sinks.Stackify/Serilog.Sinks.Stackify.csproj'
   buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
 
@@ -23,12 +23,21 @@ steps:
 
 - task: VSBuild@1
   inputs:
-    solution: 'Serilog.Sinks.Stackify.sln'
-    platform: 'Any CPU'
-    configuration: 'Release'
+    solution: '$(solution)'
+    platform: '$(buildPlatform)'
+    configuration: '$(buildConfiguration)'
 
 - task: PowerShell@2
   inputs:
     targetType: 'inline'
     script: $Env:SRCCLR_API_TOKEN="$(SRCCLR_API_TOKEN)"; Set-ExecutionPolicy AllSigned -Scope Process -Force; iex ((New-Object System.Net.WebClient).DownloadString('https://download.srcclr.com/ci.ps1')); srcclr scan .;
   enabled: false
+
+- task: Veracode@3
+  inputs:
+    ConnectionDetailsSelection: 'Endpoint'
+    AnalysisService: 'Veracode'
+    veracodeAppProfile: 'Retrace .Net Serilog Library'
+    version: 'AZ-Devops-Build-$(build.buildNumber)'
+    filepath: 'Serilog.Sinks.Stackify\bin\Release\net45\Serilog.Sinks.Stackify.dll'
+    maximumWaitTime: '360'
