--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,15 +27,25 @@ steps:
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
 
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'Serilog.Sinks.Stackify'
+    publishLocation: 'Container'
+
+- task: CmdLine@2
+  inputs:
+    script: 'dir $(Build.ArtifactStagingDirectory)'
+
+- task: CmdLine@2
+  inputs:
+    script: 'dir $(Build.BinariesDirectory)'
+
 - task: PowerShell@2
   inputs:
     targetType: 'inline'
     script: $Env:SRCCLR_API_TOKEN="$(SRCCLR_API_TOKEN)"; Set-ExecutionPolicy AllSigned -Scope Process -Force; iex ((New-Object System.Net.WebClient).DownloadString('https://download.srcclr.com/ci.ps1')); srcclr scan .;
   enabled: false
-
-- task: CmdLine@2
-  inputs:
-    script: 'dir $(Build.ArtifactStagingDirectory)'
 
 - task: Veracode@3
   inputs:
@@ -45,3 +55,4 @@ steps:
     version: 'AZ-Devops-Build-$(build.buildNumber)'
     filepath: '$(Build.ArtifactStagingDirectory)\Serilog.Sinks.Stackify\bin\Release\net45\Serilog.Sinks.Stackify.dll'
     maximumWaitTime: '360'
+  enabled: false
