--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,8 +7,8 @@ trigger:
 - master
 
 schedules:
-- cron: "0 21-22 31 * *"
-  displayName: Monthly build
+- cron: "0 21-22 * * 0"
+  displayName: Weekly build
   branches:
     include:
     - master
