Updated env variables for veracode script

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -55,6 +55,8 @@ steps:
 - task: PowerShell@2
   inputs:
     filePath: 'VeracodeDeleteStuckScan.ps1'
+  env:
+    vkey: $(vkey)
 
 - task: Veracode@3
   inputs:
