--- a/Example/packages.config
+++ b/Example/packages.config
@@ -1,7 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
-  <package id="Serilog" version="2.0.0" targetFramework="net45" />
+  <package id="Microsoft.Extensions.Configuration" version="7.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="7.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Primitives" version="7.0.0" targetFramework="net462" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net462" />
+  <package id="Serilog" version="3.0.1" targetFramework="net462" />
   <package id="Serilog.Sinks.Stackify" version="2.0.2" targetFramework="net45" />
-  <package id="StackifyLib" version="2.0.0" targetFramework="net45" />
+  <package id="StackifyLib" version="2.2.13" targetFramework="net462" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net462" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net462" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net462" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net462" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net462" />
 </packages>
