--- a/Example/App.config
+++ b/Example/App.config
@@ -1,11 +1,26 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" />
   </startup>
   <appSettings>
-    <add key="Stackify.AppName" value="" />
-    <add key="Stackify.Environment" value="" />
-    <add key="Stackify.ApiKey" value="" />
+    <add key="Stackify.AppName" value="TestNewSerilogLog" />
+    <add key="Stackify.Environment" value="TestNewSerilog" />
+    <add key="Stackify.ApiKey" value="8Hl9Cz2We9Xl7Yh0Ze4Pk6Ia3Yu9Kd1Ye5Nw5Op" />
+	<add key="Stackify.ApiUrl" value="https://qaapi.stackify.com"/>
+	<add key="MasterConfigServiceUrl" value="https://qasvc.stackify.com/ConfigService.svc"/>
+	<add key="Stackify.IngestUrl" value="https://qaingest.stackify.com"/>
   </appSettings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Extensions.Configuration.Abstractions" publicKeyToken="adb9793829ddae60" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
