--- a/Serilog.Sinks.Stackify/Serilog.Sinks.Stackify.csproj
+++ b/Serilog.Sinks.Stackify/Serilog.Sinks.Stackify.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard1.3;net45</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net6.0</TargetFrameworks>
     <PackageId>Serilog.Sinks.Stackify</PackageId>
     <Version>2.0.2</Version>
     <Authors>Serilog.Sinks.Stackify</Authors>
@@ -23,14 +23,14 @@
     <FileVersion>2.0.0.0</FileVersion>
   </PropertyGroup>
 
-  <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard1.3' ">
-    <PackageReference Include="Serilog" Version="2.0.0" />
-    <PackageReference Include="StackifyLib" Version="2.0.0" />
+  <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' ">
+    <PackageReference Include="Serilog" Version="3.0.1" />
+    <PackageReference Include="StackifyLib" Version="2.2.13" />
   </ItemGroup>
 
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net45' ">
-    <PackageReference Include="Serilog" Version="2.0.0" />
-    <PackageReference Include="StackifyLib" Version="2.0.0" />
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net6.0' ">
+    <PackageReference Include="Serilog" Version="3.0.1" />
+    <PackageReference Include="StackifyLib" Version="2.2.13" />
   </ItemGroup>
 
 </Project>
