--- a/Example/App.config
+++ b/Example/App.config
@@ -4,12 +4,9 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" />
   </startup>
   <appSettings>
-    <add key="Stackify.AppName" value="TestNewSerilogLog" />
-    <add key="Stackify.Environment" value="TestNewSerilog" />
-    <add key="Stackify.ApiKey" value="8Hl9Cz2We9Xl7Yh0Ze4Pk6Ia3Yu9Kd1Ye5Nw5Op" />
-	<add key="Stackify.ApiUrl" value="https://qaapi.stackify.com"/>
-	<add key="MasterConfigServiceUrl" value="https://qasvc.stackify.com/ConfigService.svc"/>
-	<add key="Stackify.IngestUrl" value="https://qaingest.stackify.com"/>
+    <add key="Stackify.AppName" value="" />
+    <add key="Stackify.Environment" value="" />
+    <add key="Stackify.ApiKey" value="" />
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
