--- a/Serilog.Sinks.Stackify/Serilog.Sinks.Stackify.csproj
+++ b/Serilog.Sinks.Stackify/Serilog.Sinks.Stackify.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net6.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <PackageId>Serilog.Sinks.Stackify</PackageId>
     <Version>3.0.1</Version>
     <Authors>Serilog.Sinks.Stackify</Authors>
@@ -23,14 +23,8 @@
     <FileVersion>3.0.0.0</FileVersion>
   </PropertyGroup>
 
-  <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' ">
+  <ItemGroup>
     <PackageReference Include="Serilog" Version="3.0.1" />
     <PackageReference Include="StackifyLib" Version="2.2.13" />
   </ItemGroup>
-
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net6.0' ">
-    <PackageReference Include="Serilog" Version="3.0.1" />
-    <PackageReference Include="StackifyLib" Version="2.2.13" />
-  </ItemGroup>
-
 </Project>
