--- a/Serilog.Sinks.Stackify/Serilog.Sinks.Stackify.csproj
+++ b/Serilog.Sinks.Stackify/Serilog.Sinks.Stackify.csproj
@@ -1,9 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0</TargetFrameworks>
+    <TargetFrameworks Condition=" '$(OS)' == 'Windows_NT'">net462;net471</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;netstandard2.1;</TargetFrameworks>
     <PackageId>Serilog.Sinks.Stackify</PackageId>
-    <Version>3.0.2-beta1</Version>
+    <Version>3.0.2</Version>
     <Authors>Serilog.Sinks.Stackify</Authors>
     <Company>Stackify</Company>
     <Product>Serilog Stackify Sink</Product>
