--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,28 +51,24 @@ steps:
     ArtifactName: 'Serilog.Sinks.Stackify'
     publishLocation: 'Container'
 
-- task: CmdLine@2
-  inputs:
-    script: 'dir $(Build.ArtifactStagingDirectory)'
-
-- task: PowerShell@2
-  inputs:
-    targetType: 'inline'
-    script: $Env:SRCCLR_API_TOKEN="$(SRCCLR_API_TOKEN)"; Set-ExecutionPolicy AllSigned -Scope Process -Force; iex ((New-Object System.Net.WebClient).DownloadString('https://download.srcclr.com/ci.ps1')); srcclr scan .;
-  enabled: false
-
-- task: PowerShell@2
-  inputs:
-    filePath: 'VeracodeDeleteStuckScan.ps1'
-  env:
-    vkey: $(vkey)
-
-- task: Veracode@3
-  inputs:
-    ConnectionDetailsSelection: 'Endpoint'
-    AnalysisService: 'Veracode'
-    veracodeAppProfile: 'Retrace .Net Serilog Library'
-    version: 'AZ-Devops-Build-$(build.buildNumber)'
-    filepath: '$(Build.ArtifactStagingDirectory)/Serilog.Sinks.Stackify.dll'
-    maximumWaitTime: '360'
-  enabled: true
+#- task: PowerShell@2
+#  inputs:
+#    targetType: 'inline'
+#    script: $Env:SRCCLR_API_TOKEN="$(SRCCLR_API_TOKEN)"; Set-ExecutionPolicy AllSigned -Scope Process -Force; iex ((New-Object System.Net.WebClient).DownloadString('https://download.srcclr.com/ci.ps1')); srcclr scan .;
+#  enabled: false
+#
+#- task: PowerShell@2
+#  inputs:
+#    filePath: 'VeracodeDeleteStuckScan.ps1'
+#  env:
+#    vkey: $(vkey)
+#
+#- task: Veracode@3
+#  inputs:
+#    ConnectionDetailsSelection: 'Endpoint'
+#    AnalysisService: 'Veracode'
+#    veracodeAppProfile: 'Retrace .Net Serilog Library'
+#    version: 'AZ-Devops-Build-$(build.buildNumber)'
+#    filepath: '$(Build.ArtifactStagingDirectory)/Serilog.Sinks.Stackify.dll'
+#    maximumWaitTime: '360'
+#  enabled: true
